# lemmy

./: DEVNOTES.org  README.md  install.sh
server/: Cargo.toml  rustfmt.toml
server-gql/: Cargo.toml
server-gql/migrations_dgraph/: schema.graphql
server-gql/src/: lib.rs  main.rs
server-gql/src/api/: mod.rs
server-gql/src/db/: mod.rs
server-gql/src/routes/: api.rs  mod.rs
server/migrations_dgraph/: schema.graphql  up.sh
server/src/: lib.rs
server/src/api/: handlers.rs  schema.rs
server/src/api/_unused/: mod-graphql.rs.txt  schema.graphql
server/src/api/ops/: comment.rs  community.rs
server/src/api/types/: comment.rs  community.rs  mod.rs  post.rs  user.rs
server/src/apub/: community.rs
server/src/db/: mod.rs
server/src/db/common/: dgraph_utils.rs  dgraph_utils.rs.old  traits.rs
server/src/db/entity/: moderator.rs  post.rs  private_message.rs  user_mention.rs
server/src/db/query/: comment_view.rs  community_view.rs  post_view.rs
ui/: .eslintignore  DEVNOTES.org  README.md  package.json  tsconfig.json
ui-react/public/: index.html
ui-react/src/: index.tsx
ui-react/src/components/: admin-settings.tsx  comment-form.tsx  comment-node.tsx  comment-nodes.tsx  communities.tsx  community-form.tsx  community.tsx  create-community.tsx  create-post.tsx  create-private-message.tsx  data-type-select.tsx  footer.tsx  iframely-card.tsx  inbox.tsx  listing-type-select.tsx  login.tsx  main-sidebar.tsx  main.tsx  modlog.tsx  moment-time.tsx  navbar.tsx  password_change.tsx  post-form.tsx  (+14 more)
ui/src/: env.ts  i18next.ts  interfaces.graphql  interfaces.ts
(+90 files in other folders)
