[package]
name = "lemmy_server"
version = "0.0.1"
authors = ["Dessalines <tyhou13@gmx.com>"]
edition = "2018"

[[bin]]
name = "lemmy_server"
path = "src/main.rs"

[lib]
name = "lemmy_server"
path = "src/lib.rs"

[dependencies]
# diesel = { version = "1.4.2", features = ["postgres","chrono", "r2d2", "64-column-tables"] }
# diesel_migrations = "1.4.0"
dotenv = "0.15.0"
bcrypt = "0.7.0"
activitypub = "0.2.0"
chrono = { version = "0.4.7", features = ["serde"] }
failure = "0.1"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = { version = "1.0.52", features = ["preserve_order"]}
serde-aux = "0.6"
actix = "0.9.0"
actix-web = "2.0.0"
actix-files = "0.2.1"
actix-web-actors = "2.0.0"
actix-rt = "1.1.1"
log = "0.4.0"
env_logger = "0.7.1"
rand = "0.7.3"
strum = "0.18"
strum_macros = "0.18"
jsonwebtoken = "7.0.1"
regex = "1.3.5"
lazy_static = "1.3.0"
lettre = "0.9.3"
lettre_email = "0.9.4"
sha2 = "0.8.1"
rss = "1.9.0"
htmlescape = "0.3.1"
config = "0.10.1"
hjson = "0.8.2"
percent-encoding = "2.1.0"
isahc = "0.9"
comrak = "0.7"
tokio = "0.2.20"
futures = "0.3.4"
# NOTE: can resolve multiple crates in same git repo from workspaces.toml
juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master"}
juniper_actix = { git = "https://github.com/graphql-rust/juniper", branch = "master"}
# juniper-from-schema = "0.5.2"
dgraph-tonic = "0.6"
dgraph_monkey = { path = "../../dgraph-monkey" }
async-trait = "0.1"
getset = "0.1"
indextree = "4.2"